--- a/maps/src/main/res/layout/offline_map_layers_picker.xml
+++ b/maps/src/main/res/layout/offline_map_layers_picker.xml
@@ -57,7 +57,7 @@
         app:layout_constraintTop_toBottomOf="@id/message"
         app:tint="?colorPrimary" />
 
-    <com.google.android.material.textview.MaterialTextView
+    <!--<com.google.android.material.textview.MaterialTextView
         android:id="@+id/mbtiles_info_icon_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -68,14 +68,14 @@
         app:layout_constraintBottom_toBottomOf="@id/mbtiles_info_icon"
         app:layout_constraintEnd_toStartOf="@id/guideline_end"
         app:layout_constraintStart_toEndOf="@id/mbtiles_info_icon"
-        app:layout_constraintTop_toTopOf="@id/mbtiles_info_icon" />
+        app:layout_constraintTop_toTopOf="@id/mbtiles_info_icon" />-->
 
     <androidx.constraintlayout.widget.Group
         android:id="@+id/mbtiles_info_group"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="visible"
-        app:constraint_referenced_ids="mbtiles_info_icon,mbtiles_info_icon_text" />
+        app:constraint="mbtiles_info_icon,mbtiles_info_icon_text" />
 
     <View
         android:id="@+id/top_divider"
