--- a/maps/src/main/res/layout/offline_map_layers_picker.xml
+++ b/maps/src/main/res/layout/offline_map_layers_picker.xml
@@ -57,25 +57,26 @@
         app:layout_constraintTop_toBottomOf="@id/message"
         app:tint="?colorPrimary" />
 
-    <!--<com.google.android.material.textview.MaterialTextView
+    <com.google.android.material.textview.MaterialTextView
         android:id="@+id/mbtiles_info_icon_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_standard"
-        android:text="@string/get_help_with_offline_layers"
+        android:text="String"
+        android:visibility="gone"
         android:textAppearance="?textAppearanceLabelLarge"
         android:textColor="?colorAccent"
         app:layout_constraintBottom_toBottomOf="@id/mbtiles_info_icon"
         app:layout_constraintEnd_toStartOf="@id/guideline_end"
         app:layout_constraintStart_toEndOf="@id/mbtiles_info_icon"
-        app:layout_constraintTop_toTopOf="@id/mbtiles_info_icon" />-->
+        app:layout_constraintTop_toTopOf="@id/mbtiles_info_icon" />
 
     <androidx.constraintlayout.widget.Group
         android:id="@+id/mbtiles_info_group"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="visible"
-        app:constraint="mbtiles_info_icon,mbtiles_info_icon_text" />
+        app:constraint_referenced_ids="mbtiles_info_icon,mbtiles_info_icon_text" />
 
     <View
         android:id="@+id/top_divider"
