--- a/collect_app/src/main/res/layout/form_chooser_list_item.xml
+++ b/collect_app/src/main/res/layout/form_chooser_list_item.xml
@@ -19,7 +19,7 @@
 
     <FrameLayout
         android:id="@+id/imageView"
-        android:layout_width="wrap_content"
+        android:layout_width="15dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/chip">
 
