--- a/collect_app/src/main/res/layout/form_chooser_list_item_icon.xml
+++ b/collect_app/src/main/res/layout/form_chooser_list_item_icon.xml
@@ -6,8 +6,8 @@
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
         app:srcCompat="@drawable/jed_logo" />
 
 </merge>
